gallery updates and bakery page addition

--- a/gallery.html
+++ b/gallery.html
@@ -19,11 +19,12 @@
             <h1 class="site-title">Phumelela Special Care Centre</h1>
             <nav class="main-nav">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html" aria-current="page">Gallery</a>
-                <a href="programmes.html">Programmes</a>
-                <a href="wishlist.html">Wishlist</a>
-                <a href="contact-us.html">Contact Us</a>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="programmes.html">Programmes</a>
+        <a href="bakery.html">Bakery</a>
+        <a href="wishlist.html">Wishlist</a>
+        <a href="contact-us.html">Contact Us</a>
             </nav>
         </div>
     </header>
@@ -278,6 +279,20 @@
         <div class="gallery-item"><img src="image-108.png" alt="Gallery image 18" class="gallery-image" /></div>
         <div class="gallery-item"><img src="image-109.png" alt="Gallery image 18" class="gallery-image" /></div>
         <div class="gallery-item"><img src="image-110.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-111.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-112.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-114.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-119.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-122.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-123.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-124.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-122.png" alt="Gallery image 18" class="gallery-image" /></div> 
+        <div class="gallery-item"><img src="image-125.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-127.png" alt="Gallery image 18" class="gallery-image" /></div>  
+        <div class="gallery-item"><img src="image-130.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-134.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><img src="image-143.png" alt="Gallery image 18" class="gallery-image" /></div>
+        <div class="gallery-item"><video width="640" height="360" controls class="gallery-image"><source src="vid1.mp4" type="video/mp4" />Your browser does not support the video tag.</video></div>
     </div>
   </main>
 
