--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       </button>
       
       <nav class="main-nav">
-        <a href="index.html" aria-current="page">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="gallery.html">Gallery</a>
         <a href="programmes.html">Programmes</a>
+        <a href="bakery.html">Bakery</a>
         <a href="wishlist.html">Wishlist</a>
         <a href="contact-us.html">Contact Us</a>
-
       </nav>
     </div>
   </header>
@@ -184,6 +184,10 @@
         <img src="pnp-icon.png" alt="Pick n Pay" class="donor-logo" />
         <img src="queenscasino-icon.png" alt="Queens Casino" class="donor-logo" />
         <img src="rotaryclub-icon.png" alt="Rotary Club" class="donor-logo" />
+        <img src="woolies-icon.png" alt="Woolworths" class="donor-logo" />
+        <img src="care-cure-icon.png" alt="Care Cure" class="donor-logo" />
+        <img src="gap-icon.png" alt="Get Ahead Project" class="donor-logo" />
+        <img src="ikhala-icon.png" alt="Ikhala TVET College" class="donor-logo" />
       </div>
     </div>
   </section>
