--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,9 @@
         <a href="about.html">About</a>
         <a href="gallery.html">Gallery</a>
         <a href="programmes.html">Programmes</a>
-        <a href="wishlist.html" aria-current="page">Wishlist</a>
+        <a href="bakery.html">Bakery</a>
+        <a href="wishlist.html">Wishlist</a>
         <a href="contact-us.html">Contact Us</a>
-        <a href="blog.html">Blog</a>
       </nav>
     </div>
   </header>
