--- a/programmes.html
+++ b/programmes.html
@@ -17,11 +17,12 @@
             <h1 class="site-title">Phumelela Special Care Centre</h1>
             <nav class="main-nav">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="programmes.html">Programmes</a>
-                <a href="wishlist.html">Wishlist</a>
-                <a href="contact-us.html">Contact Us</a>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="programmes.html">Programmes</a>
+        <a href="bakery.html">Bakery</a>
+        <a href="wishlist.html">Wishlist</a>
+        <a href="contact-us.html">Contact Us</a>
             </nav>
         </div>
     </header>
