updates to various pages

--- a/bakery.html
+++ b/bakery.html
@@ -62,9 +62,9 @@
         <span>🧁</span>
       </div>
       <h2>Phumelela Bakery</h2>
-      <p>Supporting our mission through fresh, homemade baked goods. Every purchase helps fund our programmes for children with disabilities.</p>
+      <p>Supporting our mission through fresh, homemade baked goods. Every purchase helps fund our programmes.</p>
       <div class="bakery-mission-note">
-        <p>All proceeds from our bakery go directly towards supporting our learners and their families</p>
+        <p>All proceeds from our bakery go directly towards supporting our learners and their families.</p>
       </div>
     </div>
   </section>
@@ -190,7 +190,7 @@
           <h4>Banana Box Cake</h4>
           <span class="price">R380</span>
         </div>
-        <p>Premium banana flavored box cake</p>
+        <p>Premium banana flavoured box cake</p>
       </div>
     </div>
   </section>
