--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section class="hero">
     <div class="hero-content">
       <h2>Caring for Children and Youth with Disabilities since 2005</h2>
-      <p>Welcome to Phumelela Special Care Centre, where we nurture, educate, and empower youth with disabilities in Queenstown, South Africa.</p>
+      <p>Welcome to Phumelela Special Care Centre, where we nurture, educate, provide therapeutic support, and empower youth with disabilities in Queenstown, South Africa.</p>
       <a href="about.html" class="btn-primary">Learn More</a>
     </div>
   </section>
@@ -107,7 +107,7 @@
 
   <section class="about">
     <h2>About Phumelela Special Care Centre</h2>
-    <p>We provide holistic support to over 100 learners from across South Africa. Since 2005, our centre has offered inclusive education, therapeutic support, and care in a compassionate environment tailored to each child with developmental disabilities.</p>
+    <p>We provide holistic support to over 100 learners from across South Africa. Since 2005, our centre has offered inclusive education and care in a compassionate environment tailored to children with disabilities.</p>
   </section>
 
   <section class="features">
@@ -119,7 +119,7 @@
     <div class="feature">
       <img src="community-icon.png" alt="Community Involvement Icon" class="feature-icon" />
       <h3>Community Involvement</h3>
-      <p>We collaborate with local organisations in Queenstown to promote inclusion and raise awareness about developmental disabilities.</p>
+      <p>We collaborate with local organisations in Queenstown to promote inclusion and raise awareness about disabilities.</p>
     </div>
     <div class="feature">
       <img src="independence-icon.png" alt="Skills for Independence Icon" class="feature-icon" />
@@ -194,7 +194,7 @@
 
   <section class="contact">
     <h2>Contact Phumelela Special Care Centre</h2>
-    <p>To learn more about our programmes for children with disabilities or get involved, contact us using the form below.</p>
+    <p>To learn more about our programmes or get involved, contact us using the form below.</p>
     <form action="https://formspree.io/f/xldlbaod" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="text" name="surname" placeholder="Your Surname" required />
