--- a/programmes.html
+++ b/programmes.html
@@ -64,9 +64,9 @@
                 <div class="programme-image-container">
                     <div class="image-overlay red-gradient"></div>
                     <img src="image-19.png" alt="Children at the centre" class="programme-image" />
-                    <div class="image-caption">
-                        <p>Supporting children with disabilities</p>
-                    </div>
+                   <!-- <div class="image-caption">
+                        <p>Supporting children with disabilities</p>  
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -77,9 +77,9 @@
                 <div class="programme-image-container">
                     <div class="image-overlay green-gradient"></div>
                     <img src="image-27.png" alt="Gardening initiative" class="programme-image" />
-                    <div class="image-caption">
+                   <!-- <div class="image-caption">
                         <p>Learning through hands-on activities</p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="programme-text green-background">
@@ -106,7 +106,7 @@
                             <span><strong>Jam & Juice Making:</strong> Food preservation techniques.</span>
                         </li>
                     </ul>
-                    <p class="programme-description">To learn more about our programmes, please visit our cooperative, <a href="https://phumelela01.github.io/LetThereBeLight/" target="_blank" class="cooperative-link">Let There Be Light</a>.</p>
+                    <p class="programme-description">To learn more about our programmes, please visit our cooperative page, <a href="https://phumelela01.github.io/LetThereBeLight/" target="_blank" class="cooperative-link">Let There Be Light</a>.</p>
                 </div>
             </div>
         </section>
