donor list updates

--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
         <img src="upcsa-icon.png" alt="UPCSA" class="donor-logo" />
         <img src="wimpy-icon.png" alt="Wimpy" class="donor-logo" />
         <img src="pep-icon.png" alt="PEP" class="donor-logo" />
-        <!-- Duplicate set for seamless scrolling -->
         <img src="nlc.png" alt="National Lottery Commission" class="donor-logo" />
         <img src="dsd.png" alt="Department of Social Development" class="donor-logo" />
         <img src="checkers-icon.png" alt="Checkers" class="donor-logo" />
@@ -184,10 +183,10 @@
         <img src="pnp-icon.png" alt="Pick n Pay" class="donor-logo" />
         <img src="queenscasino-icon.png" alt="Queens Casino" class="donor-logo" />
         <img src="rotaryclub-icon.png" alt="Rotary Club" class="donor-logo" />
-        <img src="woolies-icon.png" alt="Woolworths" class="donor-logo" />
-        <img src="care-cure-icon.png" alt="Care Cure" class="donor-logo" />
-        <img src="gap-icon.png" alt="Get Ahead Project" class="donor-logo" />
-        <img src="ikhala-icon.png" alt="Ikhala TVET College" class="donor-logo" />
+        <img src="woolies-icon.jpg" alt="Woolworths" class="donor-logo"/>
+        <img src="care-cure-icon.png" alt="Care Cure" class="donor-logo"/>
+        <img src="gap-icon.png" alt="Get Ahead Project" class="donor-logo"/>
+        <img src="ikhala-icon.png" alt="Ikhala TVET College" class="donor-logo"/>
       </div>
     </div>
   </section>
