--- a/about.html
+++ b/about.html
@@ -16,8 +16,16 @@
 <body>
       <header>
     <div class="header-container">
-      <img src="logo.png" alt="Phumelela Logo" class="logo" />
+      <img src="logo.png" alt="Phumelela Special Care Centre Logo" class="logo" />
       <h1 class="site-title">Phumelela Special Care Centre</h1>
+      
+      <!-- Mobile Menu Button -->
+      <button class="mobile-menu-btn" aria-label="Toggle navigation menu">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+      
       <nav class="main-nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
