--- a/gallery.html
+++ b/gallery.html
@@ -14,20 +14,28 @@
 
 <body>
     <header>
-        <div class="header-container">
-            <img src="logo.png" alt="Phumelela Logo" class="logo" />
-            <h1 class="site-title">Phumelela Special Care Centre</h1>
-            <nav class="main-nav">
-                <a href="index.html">Home</a>
+    <div class="header-container">
+      <img src="logo.png" alt="Phumelela Special Care Centre Logo" class="logo" />
+      <h1 class="site-title">Phumelela Special Care Centre</h1>
+      
+      <!-- Mobile Menu Button -->
+      <button class="mobile-menu-btn" aria-label="Toggle navigation menu">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+      
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="gallery.html">Gallery</a>
         <a href="programmes.html">Programmes</a>
         <a href="bakery.html">Bakery</a>
         <a href="wishlist.html">Wishlist</a>
         <a href="contact-us.html">Contact Us</a>
-            </nav>
-        </div>
-    </header>
+      </nav>
+    </div>
+  </header>
 
     <main style="max-width: 1200px; margin: auto;">
         <h2 class="heading-2">Our Gallery</h2>
