font and footer updates

--- a/donate.html
+++ b/donate.html
@@ -163,7 +163,7 @@
     </form>
   </section>
 
-  <footer>
+<footer>
     <div class="footer">
       <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank" rel="noopener noreferrer">
         <img src="facebook-icon.png" alt="Follow Phumelela on Facebook" class="social-icon" />
@@ -172,8 +172,11 @@
         <img src="instagram-icon.png" alt="Follow Phumelela on Instagram" class="social-icon" />
       </a>
       <p>&copy; 2025 Phumelela Special Care Centre. All rights reserved. Caring for children with disabilities in Queenstown, South Africa.</p>
-      <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
     </div>
+    <div class="npo-info">
+  <p>NPO Number: 086 262 NPO | PBO Number: 930056352</p>
+  <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
+</div>
   </footer>
 
  <!-- <script>
