content formatting updates

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <img src="upcsa-icon.png" alt="UPCSA" class="donor-logo" />
         <img src="wimpy-icon.png" alt="Wimpy" class="donor-logo" />
         <img src="pep-icon.png" alt="PEP" class="donor-logo" />
-        <img src="woolies-icon.jpg" alt="Woolworths" class="donor-logo"/>
+        <img src="woolies.png" alt="Woolworths" class="donor-logo"/>
         <img src="care-cure-icon.png" alt="Care Cure" class="donor-logo"/>
         <img src="gap-icon.png" alt="Get Ahead Project" class="donor-logo"/>
         <img src="ikhala-icon.png" alt="Ikhala TVET College" class="donor-logo"/>
