--- a/programmes.html
+++ b/programmes.html
@@ -51,7 +51,7 @@
   <div class="page-title-section">
       <h1 class="page-title">What We Do</h1>
       <div class="title-underline"></div>
-      <p class="page-subtitle">Empowering children with disabilities through comprehensive care and development programmes</p>
+      <p class="page-subtitle">Empowering children with disabilities through comprehensive care and development programmes.</p>
   </div>
 
   <!-- Early Intervention -->
@@ -60,10 +60,10 @@
           <div class="programme-text">
               <h2 class="programme-title red-theme">Early Intervention & Daily Support</h2>
               <ul class="enhanced-bullet-list">
-                  <li><span class="bullet-icon red"></span>Specialised education and learning support for children with disabilities</li>
-                  <li><span class="bullet-icon red"></span>Daily meals (breakfast and lunch)</li>
-                  <li><span class="bullet-icon red"></span>Life skills training and structured developmental activities</li>
-                  <li><span class="bullet-icon red"></span>Disability rights awareness and inclusion advocacy</li>
+                  <li>Specialised education and learning support for children with disabilities</li>
+                  <li>Daily meals (breakfast and lunch)</li>
+                  <li>Life skills training and structured developmental activities</li>
+                  <li>Disability rights awareness and inclusion advocacy</li>
               </ul>
               <p>We offer holistic care and developmental support for children with disabilities in Ezibeleni. Our nurturing environment fosters independence, dignity, and meaningful inclusion in everyday life.</p>
           </div>
@@ -84,11 +84,11 @@
           <div class="programme-text green-background">
               <h2 class="programme-title green-theme">Skills Development</h2>
               <ul class="enhanced-bullet-list">
-                  <li><span class="bullet-icon green"></span><strong>Gardening:</strong> Sustainable food production.</li>
-                  <li><span class="bullet-icon green"></span><strong>Baking:</strong> Teaching culinary basics and income generation.</li>
-                  <li><span class="bullet-icon green"></span><strong>Farming:</strong> Pig and poultry care.</li>
-                  <li><span class="bullet-icon green"></span><strong>Beadwork:</strong> Creativity through handmade crafts.</li>
-                  <li><span class="bullet-icon green"></span><strong>Jam & Juice Making:</strong> Food preservation techniques.</li>
+                  <li><strong>Gardening:</strong>&nbsp; Sustainable food production.</li>
+                  <li><strong>Baking:</strong>&nbsp; Teaching culinary basics and income generation.</li>
+                  <li><strong>Farming:</strong>&nbsp; Pig and poultry care.</li>
+                  <li><strong>Beadwork:</strong>&nbsp; Creativity through handmade crafts.</li>
+                  <li><strong>Jam & Juice Making:</strong> Food preservation techniques.</li>
               </ul>
               <p>To learn more about our programmes, please visit our cooperative page, <a href="https://phumelela01.github.io/LetThereBeLight/" target="_blank">Let There Be Light</a>.</p>
           </div>
